Update about (static page).

--- a/src/app/pages/about-page.component.html
+++ b/src/app/pages/about-page.component.html
@@ -1,20 +1,41 @@
 <h1 class="ic4f-main-heading">About</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-et dolore magna aliqua. Etiam tempor orci eu lobortis elementum nibh tellus. Mi ipsum faucibus vitae
-aliquet nec ullamcorper sit amet. Quis lectus nulla at volutpat diam ut venenatis tellus in.
-Pellentesque habitant morbi tristique senectus et netus et. Eget nunc lobortis mattis aliquam.
-Penatibus et magnis dis parturient montes nascetur. Blandit libero volutpat sed cras ornare arcu dui
-vivamus. Habitasse platea dictumst vestibulum rhoncus. Bibendum at varius vel pharetra vel turpis
-nunc. Amet volutpat consequat mauris nunc. Eget gravida cum sociis natoque penatibus et magnis dis.
 
-<p>Accumsan in nisl nisi scelerisque eu ultrices vitae auctor. Tristique nulla aliquet enim tortor at
-auctor urna nunc id. Urna id volutpat lacus laoreet non. Eu scelerisque felis imperdiet proin
-fermentum. Sit amet volutpat consequat mauris nunc congue nisi. Adipiscing tristique risus nec
-feugiat in fermentum posuere urna nec. Et netus et malesuada fames ac. Risus viverra adipiscing at
-in tellus integer feugiat. Lorem ipsum dolor sit amet consectetur adipiscing. Nullam eget felis eget
-nunc lobortis mattis aliquam faucibus. Augue interdum velit euismod in pellentesque massa placerat.
-Tristique nulla aliquet enim tortor at auctor. Sapien nec sagittis aliquam malesuada bibendum arcu
-vitae.
+<p>I enjoy programming like I enjoyed exploring Tolkien's Middle-earth, cataloguing and rearranging our
+home library, or even building toy cities as a child. To me, the fun comes from designing a
+structure, incrementally adding detail and simplifying the arrangement of the parts - and in the end
+having an elegant "machine", that also magically comes to life and performs seemingly impossible
+tasks. Whether it's a report-generating app, or a system guiding the next Mars rover - it's the
+complexity of what lies beneath that makes it so interesting. 
+
+<p>As a programmer, most of my work has been (so far) on content management system architecture and, to
+some extent, generative programming, mostly in the context of web applications. I also wrote
+research code in a variety of areas, only to discover over and over again that, to me, building the
+tools for research was by far more exciting than using them to do research and learn more about this
+or that phenomena. As Fred Brooks famously said, "scientists build to learn, engineers learn to
+build." Building things is what makes me happy and curious for more knowledge.
+
+
+<p>I live in beautiful Gaithersburg, MD, with my wife <a href="http://alinaavanesyan.com">Alina</a>,
+who is a postdoc at the University of Maryland and is 10 times the academic I ever would've been;
+and Alice, our little daughter, who loves her books and stuffed animals, and learned the sl (steam
+locomotive) bash command at age 2 :-)
+
+<h2>Random favorites</h2>
+
+<div class="ic4f-plist">
+  <p><strong>Read</strong> J.R.R. Tolkien, Kurt Vonnegut, Robert Sheckley, Douglas Adams, Robert Heinlein,
+  H. G. Wells, John le Carre...  
+  <p><strong>Watch</strong> The Fellowship of the Ring, all Miyazaki, American Beauty, Dr. Who, Stranger Things...
+  <p><strong>Play</strong> Scrabble, The Two Towers
+  <p><strong>Cook</strong> beef stew
+  <p><strong>Drink</strong> IPA
+  <p><strong>Ski</strong> Breckenridge
+  <p><strong>Hike</strong> Colorado
+  <p><strong>Bike</strong> Cedar Falls
+  <p><strong>Build</strong> castles for Alice's adventures, tools for Alina's experiments, and programs for anything imaginable.. 
+  <p>Because everything is so interesting.
+</div>
+
 
 <div class="row">
   <div class="col-md-3"></div>
