--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,6 +74,16 @@ tr.found {
   padding: .7rem 0 1.5rem 0;
   text-align: right;
 }
+
+.ic4f-plist {
+  p {
+    margin-bottom: .2em;
+  }
+}
+
+
+
+
 /* ------------- end of common styles ---------------- */
 
 /* -----------------------logo ----------------------- */
@@ -160,6 +170,8 @@ tr.found {
     margin: 0 .8em;
   }
 }
+
+
 /* --------------- end of about page ----------------- */
 
 /* ------------------ project list ------------------- */
