Update about (static).

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,6 +171,11 @@ tr.found {
   }
 }
 
+.ic4f-post1 {
+  font-size: .7em;
+  font-style: italic;
+}
+
 
 /* --------------- end of about page ----------------- */
 
