Add blog content.

--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,2 +1,50 @@
-<h1 class="ic4f-main-heading">Static: TODO</h1>
-this is the homepage (static so far)
+<h1 class="ic4f-main-heading">version 2.0</h1>
+
+<p class="blog-posted">June 3, 2018</p>
+
+<p>This is my new website, and this is my new blog. Last time I had a blog - about a decade ago - I
+wrote mostly about studying computer science. Browsing through my impressively-sounding old posts
+(on information extraction, automatic clustering, and parsing tables for right-recursive grammars),
+I am astonished at how naive I was! One of those posts was titled "I know nothing except the fact of
+my ignorance" - that's the perfect summary for the entire blog. But it was also about learning,
+exploring, about attending OOPSLA and Agile, and about the friends I made there. That blog was fun.
+So let's have another! 
+
+<p>Over the past decade a few things have happened. I finished grad school, fumbling my way through
+interdisciplinary research; moved from IDEs to the shell, and to Vim, till death do us part; skied
+double diamonds, finished SICP, and enjoyed 5 years of tenure-track faculty life at my alma-mater in
+Iowa. Most importantly, now it's not just me - it's us: Sergey, Alina and our little daughter Alice.
+ 
+<p>Life as a university professor can be very comfortable. What they say about getting to choose what
+you work on - whether it's research, teaching or service - it's all true, at least at the <a href="http://uni.edu">wonderful regional university</a>
+that I had the privilege being part of. Thus, I got to teach mostly programming
+and web development, serve on research grant committees, and spend the rest of my time building
+software and running servers for my own scholarship. Of course, that meant I got to spend <em>only part</em>
+of my time building and running things. And that troubled me. 
+ 
+<p>Knowing how much I suck as a programmer when I go without coding for too long, I grudged every day
+that I spent at the office without writing a line of code. Every time I looked up at my bookshelves,
+I thought of the things I wanted to learn as a programmer vs. the things I had to learn as an
+educator ...and did the simple math. Because there's only so much time. In the words of Gandalf (how
+could I resist!), "all we have to decide is what to do with the time that is given us." So I decided
+to spend that time on what I do best and like the most - programming.
+ 
+<p>..And that's only half of the story. There is also Alina - who is <a href="http://alinaavanesyan.com/publications">the real scientist and academic</a>, 
+and who found herself in a place with no scientific or academic positions for her within hundreds of
+miles (we tried commuting - it's not worth it). And once we had decided to move on, she was offered
+a wonderful opportunity as a postdoc in a lab of her longtime mentor at the University of Maryland.
+She absolutely loves it at her new lab, her department and university - and that alone was worth
+giving up any job, really.
+ 
+<p>This blog will be mostly on programming, and occasionally on <a routerLink="/about">other things I enjoy</a>. Writing has
+always helped me better understand stuff, and there'll be lots of new stuff I'll need to grok. So I
+will write about it. Although ...I'm afraid I still know nothing except the fact of my ignorance. 
+
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6 ic4f-sergey">
+    <img class="img-fluid" src="/static/images/we.jpg"> 
+  </div>
+  <div class="col-md-3"></div>
+</div>
+
