--- a/src/app/pages/about-page.component.html
+++ b/src/app/pages/about-page.component.html
@@ -1,37 +1,46 @@
-<h1 class="ic4f-main-heading">About me
-  <span class="ic4f-post1">[also, blog post #1]</span>
-</h1>
+<h1 class="ic4f-main-heading">About me</h1>
 
-<p>I am Sergey Golitsynskiy. This is my personal site. Right now most of it is about my coding
-projects, but I hope sooner rather than later it will become broader than that, with programming
-as its unifying theme.
-
+<p>I am Sergey Golitsynskiy. This is my personal website. Right now most of it is about my coding
+projects, but I hope sooner rather than later it will become broader than that, with programming as
+its unifying theme.
+ 
 <p>I enjoy programming. I wrote some Basic in high school, and I got my Commodore 64 soon after school,
-but I only started writing actual programs in my late 20s, so I'm a late bloomer. I learned most of my
-CS foundations in Java, occasionally dipping into Scheme (thank you, <a href="http://www.cs.uni.edu/~wallingf/blog/">Eugene</a>; 
-thank you, <a href="https://mitpress.mit.edu/sites/default/files/sicp/index.html">SICP</a>) and a
-few other languages. Despite the <a href="https://www.joelonsoftware.com/2005/12/29/the-perils-of-javaschools-2/">Perils of JavaSchools</a>, 
-I'm very happy with the depth of my CS foundation that I got at UNI, besides, I did learn C later
-on.. I also spent years writing .NET web applications in C#, although occasionally I did some PHP as
-well. Nowadays I write mostly Python, JavaScript and, most recently, TypeScript. I don't have a
-favorite language; one thing I know I would hate is to end up using just one.
-
-<p>In terms of domain, a substantial part of my work has been (so far) on content
-management system architecture and, to some extent, generative programming, mostly in the context of
-web applications. I also wrote research code in a variety of areas - both as a student and, later,
-as an assistant professor - but only to discover, over and over again, that building the tools for
-research was by far more exciting than using them to do research to learn more about this or that
-phenomena. As Fred Brooks famously said, "scientists build to learn, engineers learn to build."
-Building things is what makes me happy and curious for more knowledge.
-
+but I only started writing actual programs in my late 20s, so I'm a late bloomer. I learned most of
+my CS foundations in Java, occasionally dipping into Scheme (thank you, 
+<a href="http://www.cs.uni.edu/~wallingf/blog/">Eugene</a>; thank you, 
+<a href="https://mitpress.mit.edu/sites/default/files/sicp/index.html">SICP</a>) and a
+few other languages. Despite the 
+<a href="https://www.joelonsoftware.com/2005/12/29/the-perils-of-javaschools-2/">Perils of JavaSchools</a>, 
+I'm very happy with the CS foundation I got at UNI, besides, I did learn C later on.. I also wrote
+quite a few .NET web applications in C#, and occasionally did some PHP as well. Nowadays I write
+mostly Python, JavaScript and, most recently, TypeScript. I don't have a favorite language; one
+thing I know I would hate is to end up using just one.
+ 
+<p>Over the past several years I've been an <a href="http://sergey.cs.uni.edu">assistant professor</a> 
+in an interdisciplinary program at the University of Northern Iowa, teaching mostly introductory
+computer science and web development, while exploring and writing programs for 
+<a routerLink="/projects/fortepan_iowa">digital archives</a>. Prior to that, a substantial part of
+my work had been on content management system architecture and, to some extent, generative
+programming, mostly in the context of web applications. I used that experience for my master's
+thesis: I built an <a routerLink="/projects/codegenerator">object-relational mapper/code generator</a>, 
+that took a specification for an app and generated all the data access+storage code for that
+application. 
+ 
+<p>I also wrote a considerable amount of research code in <a routerLink="/projects/avocado">a variety of areas</a>, 
+mostly dealing with <a routerLink="/projects/phd">large scale text processing</a> - but only to
+discover, over and over again, that to me <em>building the tools</em> for research was by far more exciting
+than using them to address specific research questions. As Fred Brooks famously said, "scientists
+build to learn, engineers learn to build." Building things is what makes me happy and curious for
+more knowledge.
+ 
 <p>I <em>do</em> code for fun, and it's hard to come up with a definitive explanation why. CS for me was a
 conscious decision I've never regretted. I enjoy programming like I enjoyed exploring Tolkien's
-Middle-earth, cataloguing and rearranging my home library, or maybe even building toy cities as a
-child. To me, the fun comes from designing a structure, incrementally adding detail and simplifying
-the arrangement of the parts - and in the end having a complex, yet elegant "machine", that also
-"magically" comes to life and performs seemingly impossible tasks. Whether it's a report-generating
-app, or a system guiding the next Mars rover - it's <em>the complexity of what lies beneath</em> that makes
-it so interesting. 
+Middle-earth, or cataloguing and rearranging <a href="https://www.librarything.com/catalog/lotw">my home library</a>, 
+or maybe even building toy cities as a child. To me, the fun comes from designing a structure,
+incrementally adding detail and simplifying the arrangement of the parts - and in the end having a
+complex, yet elegant "machine", that also "magically" comes to life and performs seemingly
+impossible tasks. Whether it's a report-generating app, or a system guiding the next Mars rover -
+it's <em>the complexity of what lies beneath</em> that makes it so interesting.
 
 <p>I live in beautiful Gaithersburg, MD, with my wife <a href="http://alinaavanesyan.com/">Alina</a>, 
 who is a postdoc at the University of Maryland (she is the real scientist); and 
