--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,6 @@ html {
 
 body {
   color: $gray; 
-  font-family: verdana, sans-serif;
   font-size: .95rem;
   line-height: 1.4rem;
 }
@@ -151,6 +150,15 @@ tr.found {
   }
 }
 /* -----------------end of top nav ------------------- */
+
+/* --------------------- blog ------------------------ */
+.blog-posted {
+  font-size: .9em;
+  color: #999;
+  margin-top: -.8em;
+}
+
+/* ------------------ end of blog -------------------- */
 
 /* ------------------ about page --------------------- */
 .ic4f-sergey {
